--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My second repo</title>
 </head>
 <body>
+    <p>jibon ta bedonar</p>
+    <p>jibone khali dukkho ar dukkho</p>
+    <h1> I am satisfied to my beloved Allah</h1>
     
 </body>
 </html>
