more code added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>jibon ta bedonar</p>
     <p>jibone khali dukkho ar dukkho</p>
     <h1> I am satisfied to my beloved Allah</h1>
+    <p> this is moin ul islam sabbir. today is first day of my developing. I think I will do my best Insha Allah</p>
     
 </body>
 </html>
